--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -1,4 +1,11 @@
+// npm run watch-css
+
 @import "colors";
+
+body {
+  letter-spacing: 0.7px;
+  background-color: #eee
+}
 
 // Tamaños Pantalla
 
