--- a/pages/cotizaciones/cotizacion.css
+++ b/pages/cotizaciones/cotizacion.css
@@ -44,7 +44,8 @@ p {
     box-shadow: 2px 2px 6px 0px rgb(200, 167, 216)
 }
 
-.radio {
+/* Radio1 */
+.radio1 {
     display: inline-block;
     border-radius: 0;
     box-sizing: border-box;
@@ -58,11 +59,179 @@ p {
     filter: grayscale(100%)
 }
 
-.radio:hover {
+.radio1:hover {
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1)
 }
 
-.radio.selected {
+.radio1.selected {
+    box-shadow: 0px 8px 16px 0px #EEEEEE;
+    -webkit-filter: grayscale(0%);
+    -moz-filter: grayscale(0%);
+    -o-filter: grayscale(0%);
+    -ms-filter: grayscale(0%);
+    filter: grayscale(0%)
+}
+
+/* Radio2 */
+.radio2 {
+    display: inline-block;
+    border-radius: 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    color: #000;
+    font-weight: 500;
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    filter: grayscale(100%)
+}
+
+.radio2:hover {
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1)
+}
+
+.radio2.selected {
+    box-shadow: 0px 8px 16px 0px #EEEEEE;
+    -webkit-filter: grayscale(0%);
+    -moz-filter: grayscale(0%);
+    -o-filter: grayscale(0%);
+    -ms-filter: grayscale(0%);
+    filter: grayscale(0%)
+}
+
+/* Radio3 */
+.radio3 {
+    display: inline-block;
+    border-radius: 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    color: #000;
+    font-weight: 500;
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    filter: grayscale(100%)
+}
+
+.radio3:hover {
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1)
+}
+
+.radio3.selected {
+    box-shadow: 0px 8px 16px 0px #EEEEEE;
+    -webkit-filter: grayscale(0%);
+    -moz-filter: grayscale(0%);
+    -o-filter: grayscale(0%);
+    -ms-filter: grayscale(0%);
+    filter: grayscale(0%)
+}
+
+/* Radio4 */
+.radio4 {
+    display: inline-block;
+    border-radius: 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    color: #000;
+    font-weight: 500;
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    filter: grayscale(100%)
+}
+
+.radio4:hover {
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1)
+}
+
+.radio4.selected {
+    box-shadow: 0px 8px 16px 0px #EEEEEE;
+    -webkit-filter: grayscale(0%);
+    -moz-filter: grayscale(0%);
+    -o-filter: grayscale(0%);
+    -ms-filter: grayscale(0%);
+    filter: grayscale(0%)
+}
+
+/* Radio5 */
+.radio5 {
+    display: inline-block;
+    border-radius: 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    color: #000;
+    font-weight: 500;
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    filter: grayscale(100%)
+}
+
+.radio5:hover {
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1)
+}
+
+.radio5.selected {
+    box-shadow: 0px 8px 16px 0px #EEEEEE;
+    -webkit-filter: grayscale(0%);
+    -moz-filter: grayscale(0%);
+    -o-filter: grayscale(0%);
+    -ms-filter: grayscale(0%);
+    filter: grayscale(0%)
+}
+
+/* Radio6 */
+.radio6 {
+    display: inline-block;
+    border-radius: 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    color: #000;
+    font-weight: 500;
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    filter: grayscale(100%)
+}
+
+.radio6:hover {
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1)
+}
+
+.radio6.selected {
+    box-shadow: 0px 8px 16px 0px #EEEEEE;
+    -webkit-filter: grayscale(0%);
+    -moz-filter: grayscale(0%);
+    -o-filter: grayscale(0%);
+    -ms-filter: grayscale(0%);
+    filter: grayscale(0%)
+}
+
+/* Radio7 */
+.radio7 {
+    display: inline-block;
+    border-radius: 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    color: #000;
+    font-weight: 500;
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    filter: grayscale(100%)
+}
+
+.radio7:hover {
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1)
+}
+
+.radio7.selected {
     box-shadow: 0px 8px 16px 0px #EEEEEE;
     -webkit-filter: grayscale(0%);
     -moz-filter: grayscale(0%);
@@ -88,4 +257,8 @@ p {
 .btn:active {
     outline: none !important;
     box-shadow: none !important
+}
+
+.sinborde {
+    border: 0;
 }
