--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,6 +2,18 @@ body {
   letter-spacing: 0.7px;
   background-color: #eee; }
 
+h1 {
+  letter-spacing: 1px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 500 !important; }
+
+h2 {
+  letter-spacing: 0.6px;
+  font-family: monospace; }
+
+h4 {
+  font-family: cursive; }
+
 .h-100 {
   height: 100vh !important; }
 
@@ -66,7 +78,7 @@ body {
   width: 10vw !important; }
 
 .bg-beige {
-  background-color: #a9a389; }
+  background-color: #c9bfbf; }
 
 .bg-beigeGreen {
   background-color: #a6afa1; }
