--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -7,6 +7,21 @@ body {
   background-color: #eee
 }
 
+h1 {
+  letter-spacing: 1px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 500 !important;
+}
+
+h2 {
+  letter-spacing: 0.6px;
+  font-family: monospace;
+}
+
+h4 {
+  font-family: cursive;
+}
+
 // Tamaños Pantalla
 
 .h-100 {
@@ -95,7 +110,7 @@ body {
 
 // background
 .bg-beige {
-  background-color: $beige;
+  background-color: rgb(201, 191, 191);
 }
 
 .bg-beigeGreen {
