--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -19,7 +19,7 @@ h2 {
 }
 
 h4 {
-  font-family: cursive;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 // Tamaños Pantalla
