--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,7 +12,7 @@ h2 {
   font-family: monospace; }
 
 h4 {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; }
+  font-family: cursive; }
 
 .h-100 {
   height: 100vh !important; }
