feat: change fonts

--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -17,10 +17,13 @@ h2 {
   letter-spacing: 0.6px;
   font-family: monospace;
   font-weight: 300 !important;
+  font-size: 30px;
 }
 
 h4 {
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family:cursive;
+  font-weight: 100 !important;
+  font-size: 20px;
 }
 
 h5 {
