--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,10 +10,13 @@ h1 {
 h2 {
   letter-spacing: 0.6px;
   font-family: monospace;
-  font-weight: 300 !important; }
+  font-weight: 300 !important;
+  font-size: 30px; }
 
 h4 {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
+  font-family: cursive;
+  font-weight: 100 !important;
+  font-size: 20px; }
 
 h5 {
   font-weight: 200 !important; }
