--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,7 +14,7 @@ h2 {
   font-size: 30px; }
 
 h4 {
-  font-family: cursive;
+  font-family: monospace;
   font-weight: 100 !important;
   font-size: 20px; }
 
